--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "build": "webpack"
   },
   "dependencies": {
+    "aphrodite": "^1.1.0",
     "firebase": "^3.6.4",
     "object.values": "^1.0.4",
     "react": "^15.4.1",
