--- a/android/mobile/build.gradle
+++ b/android/mobile/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     compile "com.android.support:recyclerview-v7:${supportVersion}"
     compile "com.android.support:design:${supportVersion}"
 
+    compile 'com.novoda:accessibilitools:1.4.0'
+
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 
