--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -2,6 +2,9 @@
   "plugins": [
     "react"
   ],
+  "rules": {
+    "react/prop-types": "off"
+  },
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module",
