--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -3,7 +3,8 @@
     "react"
   ],
   "rules": {
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/display-name": "off"
   },
   "parserOptions": {
     "ecmaVersion": 6,
