--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "eslint": "^3.14.1",
     "eslint-plugin-react": "^6.9.0",
     "file-loader": "^0.10.0",
+    "firebase-tools": "^3.2.1",
     "webpack": "^2.2.0-rc.3",
     "webpack-dev-server": "^2.2.0-rc.0"
   }
