--- a/circle.yml
+++ b/circle.yml
@@ -17,5 +17,5 @@ deployment:
     #token acquired and set per http://stackoverflow.com/a/36504180/721000
     #environment variable FIREBASE_CLI_PREVIEWS must be set to enable functions preview (--open-sesame)
     #https://groups.google.com/forum/#!searchin/firebase-functions-trusted-testers/continuous$20integration$20%7Csort:relevance/firebase-functions-trusted-testers/7_8nntK95cU/7QGYm5H2AwAJ
-      - echo $CONFIG_JSON | base64 --decode > ${HOME}/web/config.json
+      - echo $CONFIG_JSON | base64 --decode > ./config.json
       - ./functions/node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN --non-interactive --only functions
