--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,10 @@ machine:
   node:
     version: 6.1.0
 
+compile:
+  override:
+    - npm run lint
+
 deployment:
   production:
     branch: master
