--- a/web/package.json
+++ b/web/package.json
@@ -31,11 +31,13 @@
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "enzyme": "^2.7.1",
     "eslint": "^3.14.1",
     "eslint-plugin-react": "^6.9.0",
     "file-loader": "^0.10.0",
     "firebase-tools": "^3.2.1",
     "jest": "^18.1.0",
+    "react-addons-test-utils": "^15.4.2",
     "webpack": "^2.2.0-rc.3",
     "webpack-dev-server": "^2.2.0-rc.0"
   }
