--- a/web/jest.config
+++ b/web/jest.config
@@ -3,5 +3,8 @@
   "moduleNameMapper": {
     "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
     "\\.style.js$": "<rootDir>/__mocks__/styleMock.js"
-  }
+  },
+  "setupFiles": [
+    "<rootDir>/__helper__/helper.js"
+  ]
 }
