[web] moving the mocks and test helper into the src dir under __util__

--- a/web/jest.config
+++ b/web/jest.config
@@ -1,10 +1,10 @@
 {
   "collectCoverage": "true",
   "moduleNameMapper": {
-    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__helper__/__mocks__/fileMock.js",
-    "\\.style.js$": "<rootDir>/__helper__/__mocks__/styleMock.js"
+    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/__util__/__mocks__/fileMock.js",
+    "\\.style.js$": "<rootDir>/src/__util__/__mocks__/styleMock.js"
   },
   "setupFiles": [
-    "<rootDir>/__helper__/helper.js"
+    "<rootDir>/src/__util__/helper.js"
   ]
 }
