--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "lint": "eslint webpack.config.js ./src",
-    "test": "jest --config ./jest.config",
+    "test": "jest --config ./jest.config && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "start": "webpack-dev-server --progress --colors --https --host 0.0.0.0",
     "build": "webpack"
   },
@@ -31,6 +31,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "coveralls": "^2.11.16",
     "enzyme": "^2.7.1",
     "eslint": "^3.14.1",
     "eslint-plugin-react": "^6.9.0",
