[web] using a separate task for uploading test coverage

--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,12 @@ compile:
   override:
     - npm run lint
 
+
+test:
+  override:
+    - npm test
+    - npm run coveralls
+
 deployment:
   production:
     branch: master
