Add circle action button instead of fab
- so we can specify a shape drawable as background

--- a/android/mobile/src/main/AndroidManifest.xml
+++ b/android/mobile/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Peepz">
+        android:theme="@style/PeepzApp.Theme">
 
         <activity android:name=".SignInActivity" />
         <activity android:name=".PeepzActivity" />
