--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "react-md-spinner": "^0.1.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1",
     "react-webcam": "^0.0.14",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
