Update dependencies and extract to dedicated gradle file

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,20 +1,41 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath 'com.google.gms:google-services:3.0.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.novoda:gradle-build-properties-plugin:0.2'
     }
 }
 
+apply from: 'dependencies.gradle'
+
 allprojects {
     repositories {
         jcenter()
         maven {
             url "https://jitpack.io"
+        }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+    }
+}
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.android.support') {
+                details.useVersion "$supportLibVersion"
+            }
         }
     }
 }
