Create common module and move over sample shared files

--- a/android/mobile/build.gradle
+++ b/android/mobile/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    compile project(":core")
+    compile project(":common")
 
     implementation libraries.supportAppCompat
     implementation libraries.supportDesign
