--- a/android/dependencies.gradle
+++ b/android/dependencies.gradle
@@ -7,6 +7,7 @@ ext {
             butterknife         : 'com.jakewharton:butterknife:8.8.1',
             butterknifeProcessor: 'com.jakewharton:butterknife-compiler:8.8.1',
             cameraview          : 'com.github.jackSzm:cameraview:e32e238321',
+            findbugsAnnotations : 'com.google.code.findbugs:annotations:3.0.0',
             firebaseAuth        : "com.google.firebase:firebase-auth:${firebaseVersion}",
             firebaseCore        : "com.google.firebase:firebase-core:${firebaseVersion}",
             firebaseDatabase    : "com.google.firebase:firebase-database:${firebaseVersion}",
