--- a/android/core/build.gradle
+++ b/android/core/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation libraries.findbugsAnnotations
 
-    compile 'com.google.code.findbugs:annotations:3.0.0'
-
-    testCompile 'junit:junit:4.12'
-    testCompile "org.mockito:mockito-core:1.10.19"
-    testCompile 'org.easytesting:fest-assert-core:2.0M10'
+    testImplementation librariesTest.junit
+    testImplementation librariesTest.mockito
+    testImplementation librariesTest.fest
 }
 
 sourceCompatibility = '1.7'
