--- a/android/mobile/build.gradle
+++ b/android/mobile/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    compile project(":common")
+    implementation project(":common")
 
     implementation libraries.supportAppCompat
     implementation libraries.supportDesign
@@ -61,7 +61,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
 
-    testImplementation librariesTest.fest
+    testImplementation librariesTest.junit
     testImplementation librariesTest.mockito
     testImplementation librariesTest.fest
 }
