--- a/web/package.json
+++ b/web/package.json
@@ -10,39 +10,39 @@
     "build": "webpack -p --optimize-minimize"
   },
   "dependencies": {
-    "aphrodite": "^1.1.0",
-    "firebase": "^3.6.4",
+    "aphrodite": "^1.2.5",
+    "firebase": "^3.9.0",
     "material-ui": "^0.16.7",
-    "object.values": "^1.0.4",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "object.values": "^1.1.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-md-spinner": "^0.1.0",
-    "react-redux": "^5.0.1",
-    "react-router": "^3.0.2",
+    "react-redux": "^5.1.1",
+    "react-router": "^3.2.1",
     "react-tap-event-plugin": "^2.0.1",
-    "react-webcam": "^0.0.14",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "react-webcam": "1.1.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-eslint": "^7.1.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^18.0.0",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "coveralls": "^2.11.16",
     "enzyme": "^2.7.1",
-    "eslint": "^3.14.1",
-    "eslint-plugin-react": "^6.9.0",
-    "file-loader": "^0.10.0",
-    "firebase-tools": "^3.2.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
+    "file-loader": "^0.10.1",
+    "firebase-tools": "^3.19.3",
     "jest": "^18.1.0",
     "react-addons-test-utils": "^15.4.2",
-    "webpack": "^2.2.0-rc.3",
-    "webpack-dev-server": "^2.2.0-rc.0"
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.11.3"
   }
 }
