--- a/functions/functions/package.json
+++ b/functions/functions/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "functions",
-  "description": "Firebase Functions",
+  "name": "Peepz",
+  "description": "peepz.me functions",
   "dependencies": {
-    "firebase-admin": "^4.0.5",
-    "firebase-functions": "https://storage.googleapis.com/firebase-preview-drop/node/firebase-functions/firebase-functions-preview.latest.tar.gz"
+    "firebase-admin": "^8.0.0",
+    "firebase-functions": "^3.3.0"
+  },
+  "engines": {
+    "node": "10"
   }
 }
