--- a/android/core/build.gradle
+++ b/android/core/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'java'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.google.code.findbugs:annotations:3.0.0'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
-    testCompile 'junit:junit:4.12'
-    testCompile "org.mockito:mockito-core:1.10.19"
-    testCompile 'org.easytesting:fest-assert-core:2.0M10'
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:1.10.19"
+    testImplementation 'org.easytesting:fest-assert-core:2.0M10'
 }
 
-sourceCompatibility = '1.7'
-targetCompatibility = '1.7'
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
