--- a/functions/functions/package.json
+++ b/functions/functions/package.json
@@ -2,7 +2,8 @@
   "name": "Peepz",
   "description": "peepz.me functions",
   "dependencies": {
-    "firebase-admin": "^8.0.0",
+    "@google-cloud/storage": "^4.3.0",
+    "firebase-admin": "^8.9.2",
     "firebase-functions": "^3.3.0"
   },
   "engines": {
