--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint webpack.config.js ./src",
     "test": "jest --config ./jest.config",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "start": "webpack-dev-server --progress --colors --https --host 0.0.0.0",
+    "start": "webpack-dev-server --progress --colors",
     "build": "webpack -p --optimize-minimize"
   },
   "dependencies": {
