--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,5 @@
 buildscript {
+    ext.kotlin_version = '1.3.61'
     repositories {
         jcenter()
         google()
@@ -9,6 +10,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'com.novoda:gradle-build-properties-plugin:0.2'
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 
 }
