--- a/android/mobile/src/main/AndroidManifest.xml
+++ b/android/mobile/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -25,7 +26,7 @@
             </intent-filter>
 
         </activity-alias>
-<!--        <receiver android:name=".CheckInReceiver"/>-->
+        <receiver android:name=".CheckInReceiver"/>
     </application>
 
 </manifest>
