--- a/web/package.json
+++ b/web/package.json
@@ -11,38 +11,49 @@
   },
   "dependencies": {
     "aphrodite": "^1.2.5",
-    "firebase": "^5.8.1",
+    "firebase": "^5.11.1",
     "material-ui": "^0.16.7",
-    "object.values": "^1.1.0",
+    "object.values": "^1.1.1",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-md-spinner": "^0.1.0",
-    "react-redux": "^5.1.1",
-    "react-router": "^3.2.1",
+    "react-redux": "^5.1.2",
+    "react-router": "^3.2.5",
     "react-tap-event-plugin": "^2.0.1",
     "react-webcam": "1.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^18.0.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "coveralls": "^3.0.2",
+    "babel-loader": "^8.0.6",
+    "coveralls": "^3.0.9",
     "enzyme": "^2.7.1",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^6.10.3",
-    "file-loader": "^0.10.1",
-    "firebase-tools": "^6.3.0",
+    "file-loader": "^5.0.2",
+    "firebase-tools": "^6.12.0",
     "jest": "^18.1.0",
     "react-addons-test-utils": "^15.4.2",
-    "webpack": "^2.7.0",
-    "webpack-dev-server": "^3.1.14"
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-object-rest-spread"
+    ]
   }
 }
