--- a/android/mobile/build.gradle
+++ b/android/mobile/build.gradle
@@ -9,9 +9,9 @@ android {
     defaultConfig {
         applicationId 'com.novoda.peepz'
         minSdkVersion 21
-        targetSdkVersion 26
-        versionCode 1
-        versionName '1.0'
+        targetSdkVersion 28
+        versionCode 2
+        versionName '1.1'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
@@ -30,6 +30,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
@@ -38,6 +42,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
 
     implementation 'com.novoda:accessibilitools:1.6.0'
 
