--- a/android/mobile/build.gradle
+++ b/android/mobile/build.gradle
@@ -33,6 +33,9 @@ android {
     lintOptions {
         abortOnError false
     }
+    buildFeatures {
+        viewBinding true
+    }
 
 }
 
@@ -42,7 +45,9 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+    implementation "androidx.activity:activity-ktx:1.2.2"
+    implementation 'androidx.fragment:fragment-ktx:1.3.2'
 
     implementation 'com.novoda:accessibilitools:1.6.0'
 
